# stock_track

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml  test.yaml
nginx/: Dockerfile  default.conf
src/api/: app.py  database.py  dependencies.py  models.py  schemas.py  services.py
src/stock_track/: __init__.py
src/ui/: app.py  connectors.py
tests/: conftest.py
tests/integration/: test_api.py
