[project]
name = "ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "streamlit>=1.37.1",
    "duckdb>=1.0.0",
    "sqlalchemy>=2.0.32",
    "watchdog>=4.0.2",
    "pandas>=2.2.2",
    "plotly>=5.23.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "httpx>=0.27.0",
    "pre-commit>=3.8.0",
    "pyright>=1.1.379",
    "ruff>=0.6.4",
    "pandas-stubs>=2.2.2.240807",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ui", 'src/api']

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
